--- a/apps/editor/docs/i18n.md
+++ b/apps/editor/docs/i18n.md
@@ -1,17 +1,6 @@
-# Internationalization (I18N)
+# 🌏 Internationalization (I18N)
 
 TOAST UI Editor provides the ability to set the text set in the editor's UI in various languages. There are language files provided by default, you can import each language file and set the code ​​for the language you want to use when you create an instance.
-
-
-## Contents
-
-* [Files Structure](#files-structure)
-* [Supported Languages](#supported-languages)
-* [Use npm](#use-npm)
-* [Use CDN](#use-cdn)
-* [How to Use](#how-to-use)
-* [Contributing](#contributing)
-
 
 ## Files Structure
 
@@ -36,7 +25,7 @@ If you want to contribute language files in addition to the [languages ​​sup
     - ...
 ```
 
-### Serve with npm
+### Files distributed on npm
 
 ```
 - node_modules/@toast-ui/editor/dist/
@@ -45,7 +34,7 @@ If you want to contribute language files in addition to the [languages ​​sup
     - ...
 ```
 
-### Serve with CDN
+### Files distributed on CDN
 
 ```
 - uicdn.toast.com/editor/latest/
@@ -54,7 +43,6 @@ If you want to contribute language files in addition to the [languages ​​sup
     - ko-kr.min.js
     - ...
 ```
-
 
 ## Supported Languages
 
@@ -85,8 +73,9 @@ Below is a table of valid language codes for I18N files provided by the TOAST UI
 | Chinese (S)                | zh-cn.js  | `zh-CN`         |
 | Chinese (T)                | zh-tw.js  | `zh-TW`         |
 
+## Importing Language Files
 
-## Use npm
+### Using npm
 
 You must register the language by importing the language file you want to use. The `${fileName}` is corresponding to the 'I18N File' column in [Supported Languages](#supported-languages) (Can be used without an extension).
 
@@ -96,24 +85,20 @@ You must register the language by importing the language file you want to use. T
 import '@toast-ui/editor/dist/i18n/${fileName}';
 ```
 
-or
-
 #### CommonJS
 
 ```js
-import '@toast-ui/editor/dist/i18n/${fileName}';
+require('@toast-ui/editor/dist/i18n/${fileName}');
 ```
 
+#### Using CDN
 
-## Use CDN
-
-You must register the language by including the language file you want to use. The `${fileName}` is corresponding to the 'I18N File' column in [Supported Languages](#supported-languages). It also provides a 
+You must register the language by including the language file you want to use. The `${fileName}` is corresponding to the 'I18N File' column in [Supported Languages](#supported-languages). It also provides a
 minified version.
 
 ```html
 <script src="https://uicdn.toast.com/editor/latest/i18n/${fileName}"></script>
 ```
-
 
 ## How to Use
 
@@ -127,14 +112,16 @@ If you want to set the editor in a specific language, you can use the `language`
 import Editor from '@toast-ui/editor';
 
 // Step 1 : Import language file
-import '@toast-ui/editor/dist/i18n/ko-kr'
+import '@toast-ui/editor/dist/i18n/ko-kr';
 
 // Step 2 : Set language each editor
-const foo = new Editor({ // Use default language in English
+const foo = new Editor({
+  // Use default language in English
   // ...
 });
 
-const bar = new Editor({ // Use other language
+const bar = new Editor({
+  // Use other language
   // ...
   language: 'ko-KR'
 });
@@ -152,19 +139,21 @@ import '@toast-ui/editor/dist/i18n/ko-kr';
 
 // Step 2 : Override values of language
 Editor.setLanguage('en-US', {
-  'Add row': '[Add Row]', // default value is 'Add row'
+  'Add row': '[Add Row]' // Default value is 'Add row'
 });
 
 Editor.setLanguage('ko-KR', {
-  'Add row': '[로우 추가]', // default value is '행 추가'
+  'Add row': '[로우 추가]' // Default value is '행 추가'
 });
 
 // Step 3 : Set language each editor
-const foo = new Editor({ // Use default language in English
+const foo = new Editor({
+  // Use default language in English
   // ...
 });
 
-const bar = new Editor({ // Use other language
+const bar = new Editor({
+  // Use other language
   // ...
   language: 'ko-KR'
 });
@@ -179,8 +168,8 @@ import Editor from '@toast-ui/editor';
 
 // Step 1 : Register new language
 Editor.setLanguage('en-GB', {
-  'Markdown': '...',
-  'WYSIWYG': '...',
+  Markdown: '...',
+  WYSIWYG: '...'
   // ...
 });
 
@@ -190,7 +179,6 @@ const bar = new Editor({
   language: 'en-GB'
 });
 ```
-
 
 ## Contributing
 
@@ -222,7 +210,7 @@ The first parameter is a code value that maps to the language file to register. 
 
 Editor.setLanguage('th-TH', {
   Markdown: '...',
-  WYSIWYG: '...',
+  WYSIWYG: '...'
   // ...
 });
 ```
@@ -239,8 +227,11 @@ If the following conditions are satisfied, the language code except for the coun
 
 Editor.setLanguage(['th', 'th-TH'], {
   Markdown: '...',
-  WYSIWYG: '...',
+  WYSIWYG: '...'
   // ...
 });
 ```
 
+## Example
+
+You can see the example [here](https://nhn.github.io/tui.editor/latest/tutorial-example20-i18n.html).
