--- a/apps/editor/docs/i18n.md
+++ b/apps/editor/docs/i18n.md
@@ -1,6 +1,6 @@
 # 🌏 Internationalization (I18N)
 
-TOAST UI Editor provides the ability to set the text set in the editor's UI in various languages. There are language files provided by default, you can import each language file and set the code ​​for the language you want to use when you create an instance.
+TOAST UI Editor provides the ability to set the text set in UI in various languages. There are language files provided by default, you can import each language file and set the code ​​for the language you want to use when you create an instance.
 
 ## Files Structure
 
@@ -25,7 +25,7 @@ If you want to contribute language files in addition to the [languages ​​sup
     - ...
 ```
 
-### Files distributed on npm
+### Files Distributed on npm
 
 ```
 - node_modules/@toast-ui/editor/dist/
@@ -34,7 +34,7 @@ If you want to contribute language files in addition to the [languages ​​sup
     - ...
 ```
 
-### Files distributed on CDN
+### Files Distributed on CDN
 
 ```
 - uicdn.toast.com/editor/latest/
@@ -48,7 +48,7 @@ If you want to contribute language files in addition to the [languages ​​sup
 
 Below is a table of valid language codes for I18N files provided by the TOAST UI Editor. This language code is based on the [IETF language tag](https://en.wikipedia.org/wiki/IETF_language_tag). When you import a language file, the language code is registered and you can set the code as the option.
 
-> Note : The default language of the editor is English. The production language file(`en-us.js`) for English is not provided and you don't need to import this file.
+> Note : The default language is English. The production language file(`en-us.js`) for English is not provided and you don't need to import this file.
 
 | Language Name              | I18N File | Registered Code |
 | -------------------------- | --------- | --------------- |
@@ -75,7 +75,7 @@ Below is a table of valid language codes for I18N files provided by the TOAST UI
 
 ## Importing Language Files
 
-### Using npm
+### Usage CDN
 
 You must register the language by importing the language file you want to use. The `${fileName}` is corresponding to the 'I18N File' column in [Supported Languages](#supported-languages) (Can be used without an extension).
 
@@ -91,7 +91,7 @@ import '@toast-ui/editor/dist/i18n/${fileName}';
 require('@toast-ui/editor/dist/i18n/${fileName}');
 ```
 
-#### Using CDN
+### Usage CDN
 
 You must register the language by including the language file you want to use. The `${fileName}` is corresponding to the 'I18N File' column in [Supported Languages](#supported-languages). It also provides a
 minified version.
@@ -106,7 +106,7 @@ minified version.
 
 ### Use Case 1 : Basic Usage
 
-If you want to set the editor in a specific language, you can use the `language` option to create an instance. The value of this option corresponds to the 'Registered Code' column in [Supported Languages](#supported-languages). The default value is `en` and `en-US`.
+If you want to set a specific language, you can use the `language` option to create an instance. The value of this option corresponds to the 'Registered Code' column in [Supported Languages](#supported-languages). The default value is `en` and `en-US`.
 
 ```js
 import Editor from '@toast-ui/editor';
