fix: change from I18N to i18n

--- a/apps/editor/docs/v2.0-migration-guide.md
+++ b/apps/editor/docs/v2.0-migration-guide.md
@@ -10,7 +10,7 @@ TOAST UI Editor (henceforth referred to as 'Editor') has been updated with goals
   1. Editor Usage
   2. Changes in Extensible Features (Extension -> Plugin)
   3. Syntax Highlighting Feature Usage
-  4. Internationalization (I18N) File Separation
+  4. Internationalization (i18n) File Separation
   5. jQuery Plugin Usage
   6. Others
 - Removed Features
@@ -468,7 +468,7 @@ If only using a specific language, user must include the `code-syntax-highlight.
 <script src="https://uicdn.toast.com/editor-plugin-code-syntax-highlight/latest/toastui-editor-plugin-code-syntax-highlight.min.js"></script>
 ```
 
-### 4. Internationalization (I18N) File Separation
+### 4. Internationalization (i18n) File Separation
 
 Currently, the Editor supports a total of twenty different languages, and in v1.x, Editor had a problem of increasing size as all twenty internationalization files were included in the bundle as a default. From v2.0, the internationalization files will be provided as separate files so that users can choose which languages to use.
 
@@ -546,7 +546,7 @@ const editor = new toastui.Editor({
 });
 ```
 
-More detailed explanation regarding the internationalization files can be found in the [Internationalization (I18N) Document](https://github.com/nhn/tui.editor/blob/master/apps/editor/docs/i18n.md).
+More detailed explanation regarding the internationalization files can be found in the [Internationalization (i18n) Document](https://github.com/nhn/tui.editor/blob/master/apps/editor/docs/i18n.md).
 
 ### 5. jQuery Plugin Usage
 
