--- a/apps/editor/docs/i18n.md
+++ b/apps/editor/docs/i18n.md
@@ -60,6 +60,7 @@ Below is a table of valid language codes for i18n files provided by the TOAST UI
 | Finnish (Finland)          | fi-fi.js  | `fi` \| `fi-FI` |
 | French (France)            | fr-fr.js  | `fr` \| `fr-FR` |
 | Galician (Spain)           | gl-es.js  | `gl` \| `gl-ES` |
+| Hungarian (Hungary)        | hu-hu.js  | `hu` \| `hu-HU` |
 | Italian (Italy)            | it-it.js  | `it` \| `it-IT` |
 | Japanese (Japan)           | ja-jp.js  | `ja` \| `ja-JP` |
 | Korean (Korea)             | ko-kr.js  | `ko` \| `ko-KR` |
