docs: add languages

--- a/apps/editor/docs/i18n.md
+++ b/apps/editor/docs/i18n.md
@@ -60,12 +60,14 @@ Below is a table of valid language codes for i18n files provided by the TOAST UI
 | Finnish (Finland)          | fi-fi.js  | `fi` \| `fi-FI` |
 | French (France)            | fr-fr.js  | `fr` \| `fr-FR` |
 | Galician (Spain)           | gl-es.js  | `gl` \| `gl-ES` |
+| Croatian (Croatia)         | hr-hr.js  | `hr` \| `hr-HR` |
 | Italian (Italy)            | it-it.js  | `it` \| `it-IT` |
 | Japanese (Japan)           | ja-jp.js  | `ja` \| `ja-JP` |
 | Korean (Korea)             | ko-kr.js  | `ko` \| `ko-KR` |
 | Norwegian Bokmål (Norway)  | nb-no.js  | `nb` \| `nb-NO` |
 | Dutch (Netherlands)        | nl-nl.js  | `nl` \| `nl-NL` |
 | Polish (Poland)            | pl-pl.js  | `pl` \| `pl-PL` |
+| Portuguese (Brazil)        | pt-br.js  | `pt` \| `pt-BR` |
 | Russian (Russia)           | ru-ru.js  | `ru` \| `ru-RU` |
 | Swedish (Sweden)           | sv-se.js  | `sv` \| `sv-SE` |
 | Turkish (Turkey)           | tr-tr.js  | `tr` \| `tr-TR` |
