fix: v2-migration-guide-ko docs typo

--- a/apps/editor/docs/v2.0-migration-guide-ko.md
+++ b/apps/editor/docs/v2.0-migration-guide-ko.md
@@ -350,7 +350,7 @@ const editor = new Editor({
 
 에디터에서 기본적으로 제공하는 확장 기능 외, 사용자가 직접 개발한 확장 기능을 추가해 사용할 수 있다. 1.x 버전에서는 스태틱 메서드인 `defineExtension()` API를 사용해 익스텐션 함수를 등록하고 `exts` 옵션에 등록한 익스텐션 함수에 해당하는 키 값을 설정하여 사용했었다.
 
-2.0 버전에서는 `plugins` 옵션을 사용해 플9러그인 함수를 등록하도록 변경되었다. 사용자 플러그인 함수 생성 및 옵션 설정과 관련된 자세한 사용 방법은 [문서](https://github.com/nhn/tui.editor/blob/master/apps/editor/docs/plugins.md)를 참고한다.
+2.0 버전에서는 `plugins` 옵션을 사용해 플러그인 함수를 등록하도록 변경되었다. 사용자 플러그인 함수 생성 및 옵션 설정과 관련된 자세한 사용 방법은 [문서](https://github.com/nhn/tui.editor/blob/master/apps/editor/docs/plugins.md)를 참고한다.
 
 **v1.x**
 
