chore: add code review

--- a/docs/v3.0-migration-guide-ko.md
+++ b/docs/v3.0-migration-guide-ko.md
@@ -6,19 +6,20 @@ TOAST UI Editor(이하 '에디터'로 표기)는 3.0 버전에서 기존 [CodeMi
 
 ## 목차
 
-- 변경 사항
-  1. 설치 및 사용 방법
-  2. 툴바 커스터마이징
-  3. 플러그인 정의
-  4. API와 이벤트
-- 제거된 기능
-  1. Jquery Wrapper 제거
-  2. CodeMirror, squire, to-mark 제거
-  3. 제거된 API
+- [변경 사항](#변경-사항)
+  1. [설치 및 사용 방법](#1-설치-및-사용-방법)
+  2. [툴바 커스터마이징](#2-툴바-커스터마이징)
+  3. [플러그인 정의](#3-플러그인-정의)
+  4. [API와 이벤트](#4-API와-이벤트)
+  5. [지원 브라우저 범위](#5-지원-브라우저-범위)
+- [제거된 기능](#제거된-기능)
+  1. [jQuery Wrapper 제거](#1-jQuery-Wrapper-제거)
+  2. [의존성 제거](#2-의존성-제거)
+  3. [제거된 API](#3-제거된-API)
 
 ## 변경 사항
 
-### 1. 설치
+### 1. 설치 및 사용 방법
 
 에디터 사용 방식은 기존 v2.x와 동일하게 [스코프드 패키지(Scoped package)](https://docs.npmjs.com/using-npm/scope.html)를 적용하여 다음과 같이 `@toast-ui/editor`로 패키지를 설치하여 사용한다. 아래는 npm 커맨드를 사용한 에디터 설치 예제이다.
 
@@ -78,12 +79,14 @@ v3.0의 번들 구조는 다음과 같다.
 기존의 UMD 용 번들 파일은 main 필드에 정의되며, ESM 번들 파일은 module 필드에 정의되었다.
 
 ```json
-"main": "dist/toastui-editor.js",
-"module": "dist/esm/index.js",
+{
+  "main": "dist/toastui-editor.js",
+  "module": "dist/esm/index.js",
+}
 ```
 
 #### 다크 테마 추가
-v3.0에서는 다크 테마가 추가되었다. 다크 테마를 적용하고 싶은 경우 `theme/toastui-editor-dark.css`를 추가한 후, 에디터의 `theme` 옵션을 `dark`로 설정하여 사용한다. 현재 v3.0에서는 다크 테마만 지원하지만 사용자가 여러 테마를 혼합하여 사용하거나 추후 다른 테마를 지원하기 위해 `theme` 옵션을 추가하였다.
+v3.0에서는 다크 테마가 추가되었다. 다크 테마를 적용하고 싶은 경우 `theme/toastui-editor-dark.css`를 추가한 후, 에디터의 `theme` 옵션을 `dark`로 설정하여 사용한다. 현재 v3.0에서는 다크 테마만 지원하지만, 사용자가 여러 테마를 혼합하여 사용하거나 추후 다른 테마를 지원하기 위해 `theme` 옵션을 추가하였다.
 
 ```js
 import Editor from '@toast-ui/editor';
@@ -99,9 +102,11 @@ const editor = new Editor({
 });
 ```
 
+![image](https://user-images.githubusercontent.com/37766175/120954138-73ab8680-c789-11eb-8445-87bf15842482.png)
+
 #### 의존성 정보 변경
 
-에디터 3.0에서는 v2.x에서 사용하던 의존성 모듈들이 제거되었다. 만약 CDN 환경에서 개발을 하고 있다면, v2.x에서 사용하던 [CodeMirror](https://codemirror.net/) 의존성 코드는 더 이상 필요없으니 제거해야 한다.
+에디터 3.0에서는 v2.x에서 사용하던 의존성 모듈들이 제거되었다. 만약 CDN 환경에서 개발하고 있다면, v2.x에서 사용하던 [CodeMirror](https://codemirror.net/) 의존성 코드는 더 이상 필요없으니 제거해야 한다.
 3.0에서는 Prosemirror와 관련된 의존성 모듈들이 추가되었지만, 이는 CDN 번들에 모두 포함되기 때문에 별도로 추가할 필요가 없다. 
 
 **v2.0**
@@ -140,7 +145,7 @@ const editor = new Editor({
 
 ### 2. 툴바 커스터마이징
 
-`toolbarItems` 옵션이 기존 v2.x에 비해 더 간결하고 선언적으로 변경되었다. v3.0에서는 각 툴바 아이템과 툴바 그룹을 **이중 배열** 형태의 옵션으로 정의한다. 이 방식은 그룹을 구분하기 위해 `divider`라는 불필요한 요소를 옵션으로 넘겨 정의하던 기존 방식보다 훨씬 간결하고 명확하다.
+`toolbarItems` 옵션이 기존 v2.x에 비해 더 간결하고 선언적으로 변경되었다. v3.0에서는 각 툴바 아이템과 툴바 그룹을 **2차원 배열** 형태의 옵션으로 정의한다. 이 방식은 그룹을 구분하기 위해 `divider`라는 불필요한 요소를 옵션으로 넘겨 정의하던 기존 방식보다 훨씬 간결하고 명확하다.
 
 **v2.0**
 
@@ -233,9 +238,11 @@ const popup = {
 
 몇 가지 코드가 생략되었지만, 3.0에서는 간단한 옵션 설정으로 팝업 UI를 생성하고 제어할 수 있다. 기존처럼 내부 UI에 모듈에 대해 알 필요없이 `popup` 옵션 객체에 `className`, `style`, `body` 프로퍼티만 정의하면, 툴바 버튼을 눌렀을 때 팝업을 띄울 수 있다. 툴바 커스터마이징에 대한 더 자세한 설명은 [여기](링크 추가)를 참조 바란다.
 
+![image](https://user-images.githubusercontent.com/37766175/120915630-b6b11f80-c6df-11eb-8094-b264ca9312a1.gif)
+
 ### 3. 플러그인 정의
 
-v3.0의 가장 큰 변경점은 플러그인을 정의하는 방식이다. 기존 2.x에서는 플러그인 역시 앞서 살펴본 툴바 커스터마이징처럼 에디터 내부 모듈에 대한 의존성이 굉장히 높았다. 특히 플러그인은 마크다운 에디터, 위지윅 에디터, 컨버터 등 에디터 내부 인스턴스의 동작을 더욱 깊숙히 알아야 한다. 3.0버전에서는 이 문제를 개선하기 위해 명확한 옵션을 주입하여 각각의 기능을 커스터마이징하는 형태로 변경되었다. 이 가이드에서는 옵션의 형태만 간략하게 설명할 것이며, 플러그인을 정의하는 자세한 방법은 [여기](링크 추가)서 볼 수 있다.
+v3.0의 가장 큰 변경점은 플러그인을 정의하는 방식이다. 기존 2.x에서는 플러그인 역시 앞서 살펴본 툴바 커스터마이징처럼 에디터 내부 모듈에 대한 의존성이 굉장히 높았다. 특히 플러그인은 마크다운 에디터, 위지윅 에디터, 컨버터 등 에디터 내부 인스턴스의 동작을 더욱 깊숙이 알아야 한다. 3.0버전에서는 이 문제를 개선하기 위해 명확한 옵션을 주입하여 각각의 기능을 커스터마이징하는 형태로 변경되었다. 이 가이드에서는 옵션의 형태만 간략하게 설명할 것이며, 플러그인을 정의하는 자세한 방법은 [여기](링크 추가)서 볼 수 있다.
 
 #### 커맨드 등록
 
@@ -256,7 +263,7 @@ return {
 };
 ```
 
-각각의 커맨드는 `payload`, `state`, `dispatch` 세 가지 인자를 받으며, 이를 사용하여 Prosemirror 기반의 에디터 내부 동작을 제어할 수 있다. 이 방식 역시 Prosemirror의 동작을 알아야 한다는 단점이 있다. 하지만, 앞으로 에디터 자체적으로 여러 가지 기본 커맨드를 제공할 것이기 때문에 직접적으로 이러한 내부 동작을 재정의할 일은 많지 않을 것이다.
+각각의 커맨드는 `payload`, `state`, `dispatch` 세가지 인자를 받으며, 이를 사용하여 Prosemirror 기반의 에디터 내부 동작을 제어할 수 있다. 이 방식 역시 Prosemirror의 동작을 알아야 한다는 단점이 있다. 하지만, 앞으로 에디터 자체적으로 여러 가지 기본 커맨드를 제공할 것이기 때문에 직접적으로 이러한 내부 동작을 재정의할 일은 많지 않을 것이다.
 
 #### 컨버팅
 
@@ -301,7 +308,7 @@ return {
 
 #### 툴바 아이템 등록
 
-플러그인에서 툴바 아이템을 등록하는 방식 역시 변경되었다. 앞서 설명한 툴바 커스터마이징 옵션과 유사하며, 어느 그룹에 추가될지 인덱스 정보만 추가적으로 설정하면 된다.
+플러그인에서 툴바 아이템을 등록하는 방식 역시 변경되었다. 앞서 설명한 툴바 커스터마이징 옵션과 유사하며, 어느 그룹에 추가될지 인덱스 정보만 추가로 설정하면 된다.
 
 
 ```ts
@@ -320,7 +327,7 @@ return {
 위의 코드처럼 `toolbarItems` 배열에 어떤 아이템을 추가할지 설정할 수 있다. 각 옵션 객체는 `groupIndex`, `itemIndex`, `item` 세가지 프로퍼티가 있으며 다음과 같은 역할을 한다.
 
 * `groupIndex`: 툴바 아이템을 추가할 그룹의 인덱스를 지정한다.
-* `itemIndex`: 지정한 그룹 내에서 몇 번째로 추가할 지 인덱스를 지정한다.
+* `itemIndex`: 지정한 그룹 내에서 몇 번째로 추가할지 인덱스를 지정한다.
 * `item`: 추가할 툴바 아이템 요소를 지정한다.
 
 만약 예제 코드처럼 `toolbarItems` 옵션을 설정한다면, 1번째 툴바 그룹의 4번째 인덱스로 툴바 아이템을 등록할 것이다.
@@ -330,7 +337,7 @@ return {
 
 ### 4. API와 이벤트
 
-3.0에서는 몇몇 API의 시그니처와 이벤트 명이 변경되었다. 변경된 API들은 다음과 같다.
+3.0에서 변경된 API의 시그니처와 이벤트 명은 다음과 같다.
 
 #### 커맨드
 등록하려는 커맨드의 옵션을 이름과 핸들러로 이루어진 객체 형태가 아닌 각각의 인자로 넘겨주는 형태로 변경되었다. 또한 커맨드를 실행하는 메서드의 인자 형태도 변경되었다.
@@ -407,7 +414,7 @@ type EditorPos = number; // 오프셋
 | `getRange` | `getSelection` |
 | `remove` | `destroy` |
 
-#### 이멘트 명 변경
+#### 이벤트 명 변경
 
 몇몇 이벤트 명도 더 명확한 의미를 전달을 위해 변경되었다.
 
@@ -417,15 +424,19 @@ type EditorPos = number; // 오프셋
 | `convertorAfterMarkdownToHtmlConverted` | `beforePreviewRender` |
 | `convertorAfterHtmlToMarkdownConverted` | `beforeConvertWysiwygToMarkdown` |
 
+### 5. 지원 브라우저 범위
+
+v3.0부터 지원 브라우저 범위가 **인터넷 익스플로러 11 이상**으로 변경된다. 이전 버전에서는 인터넷 익스플로러 10 이상을 지원하였으나 낮은 브라우저 점유율 및 Prosemirror 코어 모듈 사용을 위해 지원 범위를 변경하게 되었다.
+
 ## 제거된 기능
 
-### 1. Jquery Wrapper 제거
+### 1. jQuery Wrapper 제거
 
-v3.0부터는 Jquery Wrapper가 제거되었다. Jquery에서 사용을 원하는 경우 직접 `@toast-ui/editor` 패키지를 랩핑하여 사용해야 한다.
+v3.0부터는 jQuery Wrapper가 제거되었다. jQuery에서 사용을 원하는 경우 직접 `@toast-ui/editor` 패키지를 랩핑하여 사용해야 한다.
 
-### 2. CodeMirror, squire, to-mark 제거
+### 2. 의존성 제거
 
-기존의 CodeMirror, squire, to-mark 의존성이 모두 제거되었기 때문에 공식적인 API를 통해서 또는 비공식적으로 인스턴스에 직접 접근해서 해당 모듈에 직접 접근해서 수정을 하던 코드는 더 이상 동작하지 않는다. 대부분의 필요한 기능은 에디터 인스턴스 API로 추가되었으니 해당 API를 사용하길 권장한다.
+기존의 CodeMirror, squire, to-mark 의존성이 모두 제거되었기 때문에 공식적인 API를 통해서든 비공식적 방법이든 해당 모듈에 직접 접근하여 조작하던 코드는 더 이상 동작하지 않을 것이다. 대부분의 필요한 기능은 에디터 인스턴스 API로 추가되었으니 해당 API를 사용하길 권장한다.
 
 **v2.x**
 
