docs: add migration guide(en)

--- a/docs/v3.0-migration-guide-ko.md
+++ b/docs/v3.0-migration-guide-ko.md
@@ -2,7 +2,7 @@
 
 해당 문서는 TOAST UI Editor 3.0 버전 업데이트에 대한 마이그레이션 가이드로, 2.x 버전을 사용하는 사용자가 3.0 버전으로 업데이트할 때 필요한 모든 변경 사항을 기술한다.
 
-TOAST UI Editor(이하 '에디터'로 표기)는 3.0 버전에서 기존 [CodeMirror](https://codemirror.net/)와 [squire](https://github.com/nhn/tui.editor/tree/master/libs/squire), [to-mark](https://github.com/nhn/tui.editor/tree/master/libs/to-mark) 등에 대한 의존성을 제거하고 Prosemirror를 이용하여 추상화 모델을 사용하는 에디터로 변경하는 작업을 진행하였다. 코어 모듈과 API, 플러그인 사용 방법 등이 모두 변경되었기 때문에 업데이트 시 마이그레이션 가이드의 내용을 잘 숙지하길 바란다. 목차는 다음과 같으며, 실제 적용 시에는 '변경 사항' 항목의 내용을 순서대로 진행하길 권장한다.
+TOAST UI Editor(이하 '에디터'로 표기)는 3.0 버전에서 기존 [CodeMirror](https://codemirror.net/)와 squire, to-mark 등에 대한 의존성을 제거하고 Prosemirror를 이용하여 추상화 모델을 사용하는 에디터로 변경하는 작업을 진행하였다. 코어 모듈과 API, 플러그인 사용 방법 등이 모두 변경되었기 때문에 업데이트 시 마이그레이션 가이드의 내용을 잘 숙지하길 바란다. 목차는 다음과 같으며, 실제 적용 시에는 '변경 사항' 항목의 내용을 순서대로 진행하길 권장한다.
 
 ## 목차
 
@@ -76,12 +76,22 @@ v3.0의 번들 구조는 다음과 같다.
 ```
 
 또한 v3.0에서 ESM 번들이 추가되며, package.json 파일도 이에 맞게 변경되었다. 
-기존의 UMD 용 번들 파일은 main 필드에 정의되며, ESM 번들 파일은 module 필드에 정의되었다.
+기존의 UMD 용 번들 파일은 main 필드에 정의되며, ESM 번들 파일은 exports 필드에 정의되었다.
 
 ```json
 {
   "main": "dist/toastui-editor.js",
-  "module": "dist/esm/index.js",
+  "module": "dist/esm/",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/toastui-editor.js"
+    },
+    "./viewer": {
+      "import": "./dist/esm/indexViewer.js",
+      "require": "./dist/toastui-editor-viewer.js"
+    }
+  }
 }
 ```
 
@@ -452,8 +462,8 @@ console.log(editor.getSquire()); // squire 인스턴스
 ```js
 const editor = new Editor(/* */);
 
-console.log(editor.getCodeMirror()); // undefined
-console.log(editor.getSquire()); // undefined
+console.log(editor.getCodeMirror()); // Uncaught TypeError
+console.log(editor.getSquire()); // Uncaught TypeError
 ```
 
 ### 3. 제거된 API
@@ -465,7 +475,7 @@ console.log(editor.getSquire()); // undefined
 | 이름                  | 타입               |
 | --------------------- | ------------------ |
 | `isViewer`            | `{boolean}` |
-| `codeBlockManager`    | `{CodeBlockManager` |
+| `codeBlockManager`    | `{CodeBlockManager}` |
 | `WwCodeBlockManager`  | `{Class.<WwCodeBlockManager>}` |
 | `WwTableManager`      | `{Class.<WwTableManager>}` |
 | `WwTableSelectionManager` | `{Class.<WwTableSelectionManager>}` |
