Add Vietnamese language

--- a/docs/en/i18n.md
+++ b/docs/en/i18n.md
@@ -51,29 +51,30 @@ Below is a table of valid language codes for i18n files provided by the TOAST UI
 > Note : The default language is English. The production language file(`en-us.js`) for English is not provided and you don't need to import this file.
 
 | Language Name              | i18n File | Registered Code |
-| -------------------------- | --------- | --------------- |
+|----------------------------|-----------|-----------------|
 | Arabic                     | ar.js     | `ar`            |
 | Chinese (S)                | zh-cn.js  | `zh-CN`         |
 | Chinese (T)                | zh-tw.js  | `zh-TW`         |
-| Croatian (Croatia)         | hr-hr.js  | `hr` \| `hr-HR` |
-| Czech (Czech Republic)     | cs-cz.js  | `cs` \| `cs-CZ` |
-| Dutch (Netherlands)        | nl-nl.js  | `nl` \| `nl-NL` |
-| English (United States)    | en-us.js  | `en` \| `en-US` |
-| Finnish (Finland)          | fi-fi.js  | `fi` \| `fi-FI` |
-| French (France)            | fr-fr.js  | `fr` \| `fr-FR` |
-| Galician (Spain)           | gl-es.js  | `gl` \| `gl-ES` |
-| German (Germany)           | de-de.js  | `de` \| `de-DE` |
-| Italian (Italy)            | it-it.js  | `it` \| `it-IT` |
-| Japanese (Japan)           | ja-jp.js  | `ja` \| `ja-JP` |
-| Korean (Korea)             | ko-kr.js  | `ko` \| `ko-KR` |
-| Norwegian Bokmål (Norway)  | nb-no.js  | `nb` \| `nb-NO` |
-| Polish (Poland)            | pl-pl.js  | `pl` \| `pl-PL` |
-| Portuguese (Brazil)        | pt-br.js  | `pt` \| `pt-BR` |
-| Russian (Russia)           | ru-ru.js  | `ru` \| `ru-RU` |
-| Spanish (Castilian, Spain) | es-es.js  | `es` \| `es-ES` |
-| Swedish (Sweden)           | sv-se.js  | `sv` \| `sv-SE` |
-| Turkish (Turkey)           | tr-tr.js  | `tr` \| `tr-TR` |
-| Ukrainian (Ukraine)        | uk-ua.js  | `uk` \| `uk-UA` |
+| Croatian (Croatia)         | hr-hr.js  | `hr` \          | `hr-HR` |
+| Czech (Czech Republic)     | cs-cz.js  | `cs` \          | `cs-CZ` |
+| Dutch (Netherlands)        | nl-nl.js  | `nl` \          | `nl-NL` |
+| English (United States)    | en-us.js  | `en` \          | `en-US` |
+| Finnish (Finland)          | fi-fi.js  | `fi` \          | `fi-FI` |
+| French (France)            | fr-fr.js  | `fr` \          | `fr-FR` |
+| Galician (Spain)           | gl-es.js  | `gl` \          | `gl-ES` |
+| German (Germany)           | de-de.js  | `de` \          | `de-DE` |
+| Italian (Italy)            | it-it.js  | `it` \          | `it-IT` |
+| Japanese (Japan)           | ja-jp.js  | `ja` \          | `ja-JP` |
+| Korean (Korea)             | ko-kr.js  | `ko` \          | `ko-KR` |
+| Norwegian Bokmål (Norway)  | nb-no.js  | `nb` \          | `nb-NO` |
+| Polish (Poland)            | pl-pl.js  | `pl` \          | `pl-PL` |
+| Portuguese (Brazil)        | pt-br.js  | `pt` \          | `pt-BR` |
+| Russian (Russia)           | ru-ru.js  | `ru` \          | `ru-RU` |
+| Spanish (Castilian, Spain) | es-es.js  | `es` \          | `es-ES` |
+| Swedish (Sweden)           | sv-se.js  | `sv` \          | `sv-SE` |
+| Turkish (Turkey)           | tr-tr.js  | `tr` \          | `tr-TR` |
+| Ukrainian (Ukraine)        | uk-ua.js  | `uk` \          | `uk-UA` |
+| Vietnamese (Viet Nam)      | vi-vn.js  | `vn` \          | `vi-VN` |
 
 ## Importing Language Files
 
