--- a/docs/en/i18n.md
+++ b/docs/en/i18n.md
@@ -74,6 +74,7 @@ Below is a table of valid language codes for i18n files provided by the TOAST UI
 | Swedish (Sweden)           | sv-se.js  | `sv` \| `sv-SE` |
 | Turkish (Turkey)           | tr-tr.js  | `tr` \| `tr-TR` |
 | Ukrainian (Ukraine)        | uk-ua.js  | `uk` \| `uk-UA` |
+| Indonesian (Indonesia)     | id-id.js  | `id` \| `id-ID` |
 
 ## Importing Language Files
 
